# ZatupsSchedule

./: .gitignore  README.md  build.bat  build.py  pyproject.toml  run.bat
.github/ISSUE_TEMPLATE/: 1-bug.yml
media/: banner.html
src/: api.py  config.example.py  logger.py  main.py  storage.py
src/components/: base.py  schedule_display.py  search_result.py  selfdantic.py  settingsrow.py  spinner.py
src/pages/: __init__.py  current_schedule.py  search.py  settings.py  setup.py
